# loop_mp3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: code_checks.yml
src/: audio.py  cli.py  constants.py  filename_constants.py  youtube_downloader.py
src/utils/: directory_utils.py  timestamp_to_seconds_converter.py
tests/: test_youtube_downloader.py
tests/utils/: test_directory_utils.py  test_timestamp_to_seconds_converter.py
